CompilationDatabasePM: Fix crash at loading project

If rootPath is empty, QtCreator will crash.

Fixes: QTCREATORBUG-26126
Change-Id: Iac0d29d84d7203c0ec2ac8f5e3035816f52d7cdc
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>